rust/macros/tests/invalid/target/debug/deps/two_arrows_rs-6d867ea5dab5124b.d
/Users/dalton.maahs/dev/exercism/rust/macros/tests/invalid/target/debug/deps/two_arrows_rs-6d867ea5dab5124b.rmeta: two-arrows.rs

/Users/dalton.maahs/dev/exercism/rust/macros/tests/invalid/target/debug/deps/two_arrows_rs-6d867ea5dab5124b.d: two-arrows.rs

two-arrows.rs:
